using subcategory for transaction instead of category, Also updated openapi.yaml
